部分页面优化

--- a/address_detail.html
+++ b/address_detail.html
@@ -9,13 +9,15 @@
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
 <body>
-	<h3 class="p-title">选择地址</h3>
-	<a href="./address_list.html" class='select-text a-block'>
-		<span class=''>选择详细地址</span>
-		<span class="icon-arrow-r more"></span>
-	</a>
-	<div class="btn-fixed">
-		<a href='#' class="btn btn-default">发布</a>
+	<div class="container">
+		<h3 class="p-title">选择地址</h3>
+		<a href="./address_list.html" class='select-text a-block'>
+			<span class='select-addr'>选择详细地址</span>
+			<span class="icon-arrow-r more"></span>
+		</a>
+		<div class="btn-fixed">
+			<a href='#' class="btn btn-default">发布</a>
+		</div>
 	</div>
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src='./js/public.js'></script>
