调整了地位图标跟按钮的位置

--- a/position.html
+++ b/position.html
@@ -47,6 +47,9 @@
 			</a>
 		</div>
 	</div>
+	<div class="location">
+		<i class="icon-location"></i>
+	</div>
 	<div class="button">
 		<input type="hidden" value="0">
 		<div class="button-switch"></div>
@@ -73,16 +76,13 @@
 			<a href="#" class="charge">切换<i class="icon-arrow-r"></i></a>
 		</div>
 	</div>
-	<div class="location">
-		<i class="icon-location"></i>
-	</div>
 	<div>
 		<i class="icon-tool"></i>
 		<i class="icon-worker"></i>
 	</div>
 	<div class="menu-wrapper">
 		<div class="menu-header">
-			<a href="javascript:;" class='fl user-control'><i class='icon-user'></i></a>
+			<a href="javascript:;" class='user-control'><i class='icon-user'></i></a>
 			<i class="serve">全部服务</i>
 			<i class="icon-X close"></i>
 		</div>
