解决了租赁设备名字太长造成按钮被挤到下一行的问题

--- a/lease_step2.html
+++ b/lease_step2.html
@@ -29,16 +29,18 @@
 		<p class="title-bottom">请填写租赁设备的数量以及品质要求</p>
 	</div>
 	<div class="p-title">已选租赁设备</div>
-	<ul class="info-wrapper">
-		<li class="info-list">
-			<span class="info-item">单针平缝机</span>
-			<input type="number" placeholder="数量" class="btn btn-span fr">
-			<span id="picker1" class='btn btn-span fr oldAndNew'><span class="hui">9成新</span></span>
+	<ul class="lease-list">
+		<li class="lease-item">
+			<span class="lease-name">单针平缝机</span>
+			<input type="number" placeholder="数量" class="btn btn-span v-m">
+			<span id="picker1" class='btn btn-span v-m r-104 oldAndNew'><span class="hui">9成新</span></span>
+
 		</li>
-		<li class="info-list">
-			<span class="info-item">双针平缝机</span>
-			<input type="number" placeholder="数量" class="btn btn-span fr">
-			<span id="picker2" class='btn btn-span fr'><span class="hui">9成新</span></span>
+		<li class="lease-item">
+			<span class="lease-name">双针平缝机</span>
+			<input type="number" placeholder="数量" class="btn btn-span v-m">
+			<span id="picker2" class='btn btn-span v-m r-104'><span class="hui">5成新</span></span>
+
 		</li>
 	</ul>
 	<div class="p-title">收货地址</div>
