--- a/lease_step3.html
+++ b/lease_step3.html
@@ -30,18 +30,18 @@
 		<p class="title-bottom">请填写租赁设备的数量以及品质要求</p>
 	</div>
 	<div class="p-title">已选租赁设备</div>
-	<ul class="info-wrapper">
-		<li class="info-list">
-			<span class="info-item">单针平缝机</span>
-			<i tabindex="0" class="icon-i istyle" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-content="120元/天"></i>
-			<button class='btn btn-xs fr-c btn-r'>数量</button>
-			<button class='btn btn-xs fr-c btn-r'>9成新</button>
+	<ul class="lease-list">
+		<li class="lease-item">
+			<span class="lease-name">单针平缝机可以再多几个字</span>
+			<i tabindex="0" class="icon-i istyle v-m l-80" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-content="120元/天"></i>
+			<button class='btn btn-xs v-m'>1件</button>
+			<button class='btn btn-xs v-m r-104'>9成新</button>
 		</li>
-		<li class="info-list">
-			<span class="info-item">双针平缝机</span>
-			<i tabindex="1" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
-			<button class='btn btn-xs fr-c btn-r'>数量</button>
-			<button class='btn btn-xs fr-c btn-r'>2成新</button>
+		<li class="lease-item">
+			<span class="lease-name">双针平缝机</span>
+			<i tabindex="1" role='button' class="icon-i istyle v-m l-80" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
+			<button class='btn btn-xs v-m'>100件</button>
+			<button class='btn btn-xs v-m r-104'>1成新</button>
 		</li>
 	</ul>
 	<div class="p-title">收货地址</div>
