--- a/phone_verify.html
+++ b/phone_verify.html
@@ -27,7 +27,7 @@
 			<input type='number' placeholder="输入验证码" class="info-right">
 		</li>
 	</ul>
-	<button type="button" class="btn btn-default">下一步</button>
+	<button type="button" class="btn btn-default btn-top">下一步</button>
 	<div class="explain fixed">
 		<p>本服务由云衣尚提供底层技术支持</p>
 	</div>
