修复了部分页面的显示问题

--- a/personal_data.html
+++ b/personal_data.html
@@ -14,13 +14,21 @@
 			<img src="./images/company-1@3x.png" class="avatar3">
 		</div>
 		<div class="pt-text">
-			<p class="pt-title pt-18">李雷
-				<span class="spacing">个人认证</span>
+			<span class="user-name">李雷</span>
+			<p>
+				<span class="pt-content ">
+					<i class="icon-confirm confirm-style"></i>
+					<span class="attct">个人认证</span>
+				</span>
+				<span class="pt-content ">
+					<i class="icon-confirm confirm-style"></i>
+					<span class="attct">企业认证</span>
+				</span>
 			</p>
-			<p class="pt-content ">
-				<span>个性签名介绍下自己吧~</span>
-			</p>
-			<span class="icon-arrow-r more-middle"></span>
+			<div class="sign">
+				个性签名介绍下自己吧~个性签名介绍下自己吧~
+			</div>
+			<span class="icon-arrow-r more-t-60"></span>
 		</div>
 	</a>
 	<ul class="info-wrapper verify">
