--- a/repaired.html
+++ b/repaired.html
@@ -50,9 +50,9 @@
 			</p>
 			<p class="pt-content ">
 				<i class="icon-confirm confirm-style"></i>
-				<span>个人认证</span>
+				<span class="attct">个人认证</span>
 				<i class="icon-confirm confirm-style"></i>
-				<span>公司认证</span>
+				<span class="attct">公司认证</span>
 			</p>
 		</div>
 		<span class="icon-arrow-r more-middle"></span>
