--- a/repairer_info.html
+++ b/repairer_info.html
@@ -14,25 +14,43 @@
 			<img src="./images/company-1@3x.png" class="repairer-ava">
 		</div>
 		<div class="pt-text fl">
-			<span class="pt-title pt-v-t pt-18 mr-20">头像</span>
-			<span class="pt-content ">
-				<i class="icon-confirm confirm-style"></i>
-				<span>个人认证</span>
-			</span>
+			<span class="user-name">李雷</span>
+			<p>
+				<span class="pt-content ">
+					<i class="icon-confirm confirm-style"></i>
+					<span class="attct">个人认证</span>
+				</span>
+				<span class="pt-content ">
+					<i class="icon-confirm confirm-style"></i>
+					<span class="attct">企业认证</span>
+				</span>
+			</p>
 		</div>
 	</div>
 	<ul class="info-wrapper">
-		<li class="info-list">
+	<!-- 	<li class="info-list">
 			<span class="info-left">技能</span>
 			<span class="info-item">电脑平缝机</span>
 		</li>
 		<li class="info-list">
 			<span class="info-left">区域</span>
 			<span class="info-item">泉州市区、厦门市区</span>
+		</li> -->
+		<li class="info-list-more">
+			<span class="info-left vl-t">技能</span>
+			<div class="autowrap balh">
+				<span>电脑平缝针 电脑平缝针 电脑平缝针电脑平缝针电脑平缝针</span>
+			</div>
 		</li>
 		<li class="info-list-more">
-			<span class="info-left">简介</span>
-			<textarea class="textarea" placeholder="未完善">福建省 石狮市 服装城总部大厦二楼大门右拐执行第4排工位</textarea>
+			<span class="info-left vl-t">区域</span>
+			<div class="autowrap balh">
+				<span>泉州市区、厦门市区</span>
+			</div>
+		</li>
+		<li class="info-list-more">
+			<span class="info-left vl-t">简介</span>
+			<span class="textarea autowrap">福建省 石狮市 服装城总部大厦二楼大门右拐执行第4排工位</span>
 		</li>
 	</ul>
 	<ul class="info-wrapper">
