--- a/waiting_repair.html
+++ b/waiting_repair.html
@@ -50,7 +50,7 @@
 			</p>
 			<p class="pt-content ">
 				<i class="icon-confirm confirm-style"></i>
-				<span>个人认证</span>
+				<span class="attct">个人认证</span>
 			</p>
 		</div>
 		<span class="icon-arrow-r more-middle"></span>
