更改了选择达到时间页面的时间控件

--- a/arrive_time.html
+++ b/arrive_time.html
@@ -5,8 +5,7 @@
 	<meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="./css/jquery-ui.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/jquery-ui-timepicker-addon.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/mobiscroll.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
@@ -16,15 +15,12 @@
 	</div>
 	<div class="p-title">到达时间：</div>
 	<label for='starttime' class='select-text block'>
-		<input type="text" class="date-picker" id="starttime" placeholder="请选择到达时间" data-date-format="yyyy-mm-dd" name="starttime" readonly="readonly" />
+		<input type="text" class="date-picker" id="time-picker" placeholder="请选择到达时间" data-date-format="yyyy-mm-dd" name="starttime" readonly="readonly" />
 	</label>
-
 	<a href="javascript:;" class="btn btn-default btn-bottom">提交</a>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
-	<script type="text/javascript" src="./js/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="./js/jquery-ui-timepicker-addon.min.js"></script>
-	<script type="text/javascript" src="./js/jquery-ui-timepicker-zh-CN.js"></script>
+	<script type="text/javascript" src="./js/mobiscroll.min.zh.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
 </body>
 </html>
