--- a/account.html
+++ b/account.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
-	<title></title>
+	<title>account</title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
-	<script type="text/javascript" src='./js/normalize.js'></script>
+	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
 <body>
 	<ul class="info-wrapper verify">
@@ -25,6 +25,26 @@
 			</a>
 		</li>
 	</ul>
+
+	<div class="menu-content">
+		<button class="menu-item menu-triger pink">
+			<i class="icon-bars"></i>
+		</button>
+		<div class="menu-list">
+			<a href="#" class="menu-item yellow">
+				<i class="icon-tmp-1"></i>
+			</a>
+			<a href="#" class="menu-item blue">
+				<i class="icon-tmp-2"></i>
+			</a>
+			<a href="#" class="menu-item green">
+				<i class="icon-tmp-3"></i>
+			</a>
+			<a href="#" class="menu-item purple">
+				<i class="icon-tmp-4"></i>
+			</a>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
