更改了菜单按钮的颜色

--- a/account.html
+++ b/account.html
@@ -27,20 +27,20 @@
 	</ul>
 
 	<div class="menu-content">
-		<button class="menu-item menu-triger pink">
+		<button class="menu-item menu-triger green">
 			<i class="icon-bars"></i>
 		</button>
 		<div class="menu-list">
-			<a href="#" class="menu-item yellow">
+			<a href="#" class="menu-item light-green">
 				<i class="icon-tmp-1"></i>
 			</a>
-			<a href="#" class="menu-item blue">
+			<a href="#" class="menu-item light-green">
 				<i class="icon-tmp-2"></i>
 			</a>
-			<a href="#" class="menu-item green">
+			<a href="#" class="menu-item light-green">
 				<i class="icon-tmp-3"></i>
 			</a>
-			<a href="#" class="menu-item purple">
+			<a href="#" class="menu-item light-green">
 				<i class="icon-tmp-4"></i>
 			</a>
 		</div>
